--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "src/MathJax"]
 	path = src/MathJax
 	url = https://github.com/mathjax/MathJax.git
+[submodule "src/KaTeX"]
+	path = src/KaTeX
+	url = https://github.com/KaTeX/KaTeX.git
