feat: add tauri app

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,28 @@ src/Workbox/*
 src/workbox-*
 src/service-worker.js*
 src/icon-*.png
+
+# Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
+
+node_modules
+dist
+dist-ssr
+*.local
+
+# Editor directories and files
+.vscode/*
+!.vscode/extensions.json
+.idea
+.DS_Store
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
